--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.2.3"
+    "babel-preset-es2015": "^6.14.0",
+    "babel-register": "^6.14.0",
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "react-redux": "^4.4.5",
+    "react-scripts": "0.2.3",
+    "redux": "^3.5.2"
   },
   "dependencies": {
     "react": "^15.3.1",
@@ -12,7 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "mocha ./src/tests/*.spec.js --recursive --require babel-register"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
