--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "babel-register": "^6.14.0",
     "expect": "^1.20.2",
     "mocha": "^3.0.2",
+    "node-uuid": "^1.4.7",
     "react-redux": "^4.4.5",
     "react-scripts": "0.2.3",
     "redux": "^3.5.2"
   },
   "dependencies": {
+    "lodash": "^4.15.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   },
